--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-asd
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Odin Sign-Up Form</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>Odin</header>
+    <main></main>
+    <footer></footer>
+  </body>
+</html>
