add font and left side styled

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   <body>
     <header></header>
     <main>
-      <div id="left">
+      <section id="left">
         <div id="overlay">
           <img src="logo.png" />
           <p>ODIN</p>
         </div>
         <img src="splash.jpg" />
-      </div>
-      <div id="right">
+      </section>
+      <section id="right">
         <h1>
           This is not a real online service! You know you need something like
           this in your life to help you realize your deepest dreams.<br />
@@ -45,7 +45,7 @@
           <button type="submit">Create Account</button>
         </form>
         <div>Already have an account? <a href="google.com">Log In</a></div>
-      </div>
+      </section>
     </main>
     <footer></footer>
   </body>
