--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
           <p>ODIN</p>
         </div>
         <img src="splash.jpg" />
+        <div id="reference">Photo by Hailie West on Unsplash</div>
       </section>
       <section id="right">
         <h1>
@@ -24,27 +25,43 @@
           You <em>know</em> you want to.
         </h1>
 
-        <form action="#">
-          <div class="title">Let's do this!</div>
-          <fieldset id="name">
-            <label for="first-name">First Name</label>
-            <input type="text" id="first-name" name="first_name" />
-            <label for="last-name">Last Name</label>
-            <input type="text" id="last-name" name="last_name" />
-          </fieldset>
-          <label for="email">EMAIL</label>
-          <input type="email" id="email" name="email" />
-          <label for="phone">PHONE NUMBER</label>
-          <input type="tel" id="phone" name="phone" />
-          <fieldset id="password">
-            <label for="password">PASSWORD</label>
-            <input type="password" id="password" name="password" />
-            <label for="confirm-password">CONFIRM PASSWORD</label>
-            <input type="password" id="password" name="confirm_password" />
-          </fieldset>
-          <button type="submit">Create Account</button>
-        </form>
-        <div>Already have an account? <a href="google.com">Log In</a></div>
+
+          <form action="#">
+            <div id="form-box">
+              <h2>Let's do this!</h2>
+            <div class="form-inputs">
+              <div class="form-group"
+                <label for="first-name">FIRST NAME</label>
+                <input type="text" id="first-name" name="first_name" />
+                </div>
+              <div class="form-group">
+                <label for="last-name">LAST NAME</label>
+                <input type="text" id="last-name" name="last_name" />
+                </div>
+              <div class="form-group"
+                <label for="email">EMAIL</label>
+                <input type="email" id="email" name="email" />
+                </div>
+              <div class="form-group"
+                <label for="phone">PHONE NUMBER</label>
+                <input type="tel" id="phone" name="phone" />
+                </div>
+              <div class="form-group"
+                <label for="password">PASSWORD</label>
+                <input type="password" minlength= "8"id="password" name="password" />
+                </div>
+              <div class="form-group"
+                <label for="confirm-password">CONFIRM PASSWORD</label>
+                <input type="password" minlength= "8"id="password" name="confirm_password" />
+                </div>
+            </div>
+            </div>
+            <button type="submit">Create Account</button>
+          </form>
+          <div id="account">
+            Already have an account? <a href="google.com">Log In</a>
+          </div>
+
       </section>
     </main>
     <footer></footer>
